--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Project showcase
 email: t.david92@gmail.com
 url: https://tsulok.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
+description: "This is my Project showcase"
+keywords: "iOS, Android, Swift, Kotlin, JAVA"
 skills: "Android & iOS Developer - Skydiver"
 meta_author: Dávid Timár
 
